force-app/main/default/objects/CDC_CAC_Asset_Contact__c/CDC_CAC_Asset_Contact__c.object-meta.xml
<CustomObject>
    <label>Asset Contact</label>
    <nameField>
        <displayFormat>ACR-{0000000000}</displayFormat>
        <label>Asset Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>