force-app/main/default/objects/CDC_CAC_Asset_Contact__c/fields/CDC_CAC_First_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>CDC_CAC_First_Registration_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Registration Date</label>
    <type>Date</type>
</CustomField>