force-app/main/default/objects/CDC_CAC_Asset_Contact__c/fields/CDC_CAC_Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>CDC_CAC_Relationship_Type__c</fullName>
    <label>CDC CAC Relationship Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Driver</fullName>
            </value>
            <value>
                <fullName>Lessee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>